<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5sp"
            app:cardCornerRadius="5sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_memory"
                android:background="@color/wheat"
                android:gravity="center"
                android:text="@string/text_memory"
                android:textSize="35sp"
                android:textColor="#fff"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/web"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5sp"
                app:cardCornerRadius="5sp">

                <Button
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/hotpink"
                    android:text="@string/text_reset"
                    android:textSize="35sp"
                    android:textColor="#fff"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5sp"
                app:cardCornerRadius="5sp">

                <Button
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkcyan"
                    android:text="@string/text_log_out"
                    android:textSize="35sp"
                    android:textColor="#fff"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5sp"
        app:cardCornerRadius="5sp">

        <TextView
            android:id="@+id/text_games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/khaki"
            android:gravity="center"
            android:text="@string/text_games"
            android:textSize="45sp"
            android:textColor="#fff"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>
